<resources>
    <string name="app_name">exams_</string>
    <string name="timetable">Расписание</string>
    <string name="home">Home</string>
    <string name="marks">Marks</string>
    <string name="notes">Notes</string>
    <string name="classes">Classes</string>
    <string name="Greeting">Hi, student!</string>
    <string name="search">Search</string>
    <string name="myaccount">My account</string>
    <string name="filters">Filters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="math">Math</string>
    <string name="_5_days_left">5 days left</string>
    <string name="home_work_math_1">Read pages 11-13, do exercises 3-6</string>
    <string name="it">IT</string>
    <string name="_7_days_left">7 days left</string>
    <string name="homework_2">Write code which will count \n sum of to numbers a and b</string>
    <string name="_10_days_left">10 days left</string>
    <string name="read_war_and_piece">Read \'war and piece\'</string>
    <string name="homework">Homework</string>
    <string name="list">List</string>
    <string name="menu">Menu</string>
    <string name="_8_00_8_45">8:00 - 8:45</string>
    <string name="history">History</string>
    <string name="skype">Skype</string>
    <string name="_10_00_10_45">10:00 - 10:45</string>
    <string name="pe">Physical Edication</string>
    <string name="teacher_mr_barros">Teacher: Mr. Barros</string>
    <string name="literature">Literature</string>
    <string name="_5_classes_today">5 classes today</string>
    <string name="next_class">Next class</string>
    <string name="are_you_ready_for_exams">Are you ready for exams?</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="_6_classes_today">6 classes today</string>
</resources>