<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_classes"
        android:icon="@drawable/outline_search_white_18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/is_list"
        android:icon="@drawable/outline_list_white_18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:title="@string/list"
        app:showAsAction="always"/>

    <item
        android:id="@+id/isMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_drag_indicator_white_18dp"
        android:title="@string/menu"
        app:showAsAction="always"/>
</menu>