<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/outline_search_white_18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/filters"
        android:icon="@drawable/outline_filter_alt_white_18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:title="@string/filters"
        app:showAsAction="always"/>

    <item
        android:id="@+id/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_account_circle_white_18dp"
        android:title="@string/myaccount"
        app:showAsAction="always"/>
</menu>