<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/Greeting"
        app:menu="@menu/top_app_bar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/additional_classes"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nextLesson">

        <TextView
            android:id="@+id/ready"
            android:text="@string/are_you_ready_for_exams"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ready"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/DaysBeforeExam"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/countdown_style"
                android:layout_width="wrap_content"
                android:padding="4dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/HoursBeforeExam"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@drawable/countdown_style"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/DaysBeforeExam"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/MinutesBeforeExam"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@drawable/countdown_style"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/HoursBeforeExam"
                app:layout_constraintTop_toTopOf="parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/countdown">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:layout_margin="4dp"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/DaysBeforeExam"
            app:layout_constraintTop_toBottomOf="@+id/DaysBeforeExam"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:layout_margin="4dp"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/HoursBeforeExam"
            app:layout_constraintTop_toBottomOf="@+id/HoursBeforeExam"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:layout_margin="4dp"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/MinutesBeforeExam"
            app:layout_constraintTop_toBottomOf="@+id/MinutesBeforeExam"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/nextLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_class"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/next_subject"
        app:layout_constraintStart_toStartOf="@id/homeworktext"/>

    <TextView
        android:id="@+id/countOfSubjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_classes_today"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/nextLesson"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/next_subject"
        android:padding="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_navigation_style"
        app:layout_constraintBottom_toTopOf="@+id/homeworktext"
        app:layout_constraintStart_toStartOf="@+id/homeworktext"
        android:layout_marginBottom="64dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/subject_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_style"
            android:padding="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/subject_title" />

        <TextView
            android:id="@+id/subject_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/subject_icon"/>

        <TextView
            android:id="@+id/timeNextSbj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/subject_title"
            app:layout_constraintStart_toStartOf="@+id/subject_title"
            android:textSize="14sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/homeworktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/homework"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/home_work_scroll"
        app:layout_constraintStart_toStartOf="parent"/>
    <HorizontalScrollView
        android:id="@+id/home_work_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/homework_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:background="@drawable/bottom_navigation_style">

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/math"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.00"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/homework_1"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/subject"
                    app:layout_constraintBottom_toTopOf="@+id/homework_1"
                    android:src="@drawable/baseline_book_white_18dp"/>

                <ImageView
                    android:id="@+id/alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/outline_alarm_white_18dp"
                    app:layout_constraintTop_toBottomOf="@+id/subject"
                    tools:ignore="MissingConstraints"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toRightOf="@+id/alarm"
                    app:layout_constraintTop_toBottomOf="@+id/subject"
                    android:text="@string/_5_days_left"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_work_math_1"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alarm" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/homework_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/bottom_navigation_style">

                <TextView
                    android:id="@+id/subject_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/it"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.00"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/homework_2"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/subject_2"
                    app:layout_constraintBottom_toTopOf="@+id/homework_2"
                    android:src="@drawable/baseline_book_white_18dp"/>

                <ImageView
                    android:id="@+id/alarm_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/outline_alarm_white_18dp"
                    app:layout_constraintTop_toBottomOf="@+id/subject_2"
                    tools:ignore="MissingConstraints"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toRightOf="@+id/alarm_2"
                    app:layout_constraintTop_toBottomOf="@+id/subject_2"
                    android:text="@string/_7_days_left"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homework_2"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alarm_2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/homework_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/bottom_navigation_style">

                <TextView
                    android:id="@+id/subject_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/literature"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.00"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/homework_3"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/subject_3"
                    app:layout_constraintBottom_toTopOf="@+id/homework_3"
                    android:src="@drawable/baseline_book_white_18dp"/>

                <ImageView
                    android:id="@+id/alarm_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/outline_alarm_white_18dp"
                    app:layout_constraintTop_toBottomOf="@+id/subject_3"
                    tools:ignore="MissingConstraints"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toRightOf="@+id/alarm_3"
                    app:layout_constraintTop_toBottomOf="@+id/subject_3"
                    android:text="@string/_10_days_left"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_war_and_piece"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alarm_3" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>